# gpu-detection

./: .gitignore  .npmignore  README.md  build-package.js  package.json  rename-native-module.js
.github/workflows/: ci.yml
lib/: index.d.ts  index.js
native/: Cargo.toml
native/src/: lib.rs
