[package]
name = "gpu-detection"
version = "0.1.0"
authors = ["Felix Brucker <felix@felixbrucker.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "gpu_detection"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.7.1"

[dependencies]
fil-ocl-core = "0.11.4"

[dependencies.neon]
version = "0.7.1"
default-features = false
features = ["napi-3"]
